--- a/BlogPoster/package.json
+++ b/BlogPoster/package.json
@@ -12,12 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/list": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
     "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
+    "@mui/material": "^5.15.10",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "fullcalendar": "^6.1.10",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "vite-plugin-css": "^1.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
