--- a/BlogPoster/package.json
+++ b/BlogPoster/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "fullcalendar": "^6.1.10",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
