--- a/BlogPoster/package.json
+++ b/BlogPoster/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "styled-components": "^6.1.8",
